--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,4 +1,6 @@
 
     <link rel="stylesheet" href="/css/user_profile.css">
         <h1>Codeial /UserProfile</h1>
+        <p> Name : <%= user.name %></p>
+        <p> Email : <%= user.email %></p>
      
