adding sass elements

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,7 @@
-<footer>
-    Page Footer
+<footer id="footer">
+    <p>&copy;vibhor sxn</p>
+    <div id=link>
+    <a  href="/users/profile">Profile</a>
+    <a  href="/">Home</a>
+</div>
 </footer>
