--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,31 @@
 <header>
+    <nav id="header-nav">
     Page Header
+
+
+
+    <ul>
+        <% if(locals.user) { %>
+        <li>
+            <a href="/users/profile">
+            <%= user.name %> Profile
+            </a>
+        </li>
+        <li>
+            <a href="/users/sign-out">Sign Out</a>
+        </li>
+
+        <% }else{ %>
+
+            <li>
+                <a href="/users/sign-in">Sign In</a>
+            </li>
+            <li>
+                <a href="/users/sign-up">Sign Up</a>
+            </li>
+
+
+            <% } %>
+    </ul>
+</nav>
 </header>
