--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,15 +3,22 @@
         <title>
             <%= title %>
         </title>
-        <link rel="stylesheet" href="/css/layout.css"><link>
+        <link rel="stylesheet" href="/css/layout.css">
+        <link rel="stylesheet" href="/css/header.css">
+        <link rel="stylesheet" href="/css/footer.css">
+
         <%- style %> 
         
     </head>
 
     <body>
         <%- include('_header') %>
+
+        <main id="layout-main">
+            <%- body %>
+        </main>
     
-        <%- body %>
+        
         <%- include('_footer') %>
 
         <%- script %>
