--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,12 +4,32 @@
 
 <section id="feed-posts">
 <h4>Posts</h4>
-<form action="" id="new-post-form" method="POST">
-<textarea name="content" cols="30" rows="3"></textarea>
-<input type="submit" value="post">
+<% if (locals.user){ %>
+<form action="/posts/create" id="new-post-form" method="POST">
+<textarea name="content" cols="30" rows="3" placeholder="Type here"></textarea>
+<input type="submit" value="Post">
 
 </form>
+<% } %>
+<div id="posts-list-container">
+        <ul>
+                <% for(post of posts){ %>
 
+                     <li>
+                             <p>
+                             <%= post.content %>
+                             <br>
+                             <small>
+                                     <%= post.user.name %>
+
+                             </small>
+                        </p>
+                     </li>
+
+                       <%} %>
+               
+        </ul>
+</div>
 </section>
         
       
